[build] Adds gobject-introspection support to build system

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -48,3 +48,47 @@ MAINTAINERCLEANFILES =	\
 	*~
 
 DISTCLEANFILES = $(MAINTAINERCLEANFILES)
+CLEANFILES =
+
+# introspection support
+if HAVE_INTROSPECTION
+BUILT_GIRSOURCES =
+
+INCLUDES =			\
+	-I$(top_srcdir)		\
+	-I$(top_srcdir)/src	\
+	-I$(top_srcdir)/src/data
+
+@GRL_GIR_API_NAME@.gir: $(INTROSPECTION_SCANNER) lib@GRL_NAME@.la
+	$(INTROSPECTION_SCANNER) -v			\
+		--namespace @GRL_GIR_NAMESPACE@		\
+		--nsversion=@GRL_MAJORMINOR@		\
+		$(INCLUDES)				\
+		--c-include="$(srcdir)/grilo.h"		\
+		--include=GObject-2.0			\
+		--library=lib@GRL_NAME@.la		\
+		--libtool="$(top_builddir)/libtool"	\
+	        --output $@				\
+		$(lib@GRL_NAME@inc_HEADERS)		\
+		$(lib@GRL_NAME@_la_SOURCES)		\
+		data/*.h
+
+BUILT_GIRSOURCES += @GRL_GIR_API_NAME@.gir
+
+# INTROSPECTION_GIRDIR/INTROSPECTION_TYPELIBDIR aren't the right place to
+# install anything - we need to install inside our prefix.
+girdir = $(datadir)/gir-1.0
+gir_DATA = $(BUILT_GIRSOURCES)
+
+typelibsdir = $(libdir)/girepository-1.0/
+
+typelibs_DATA = $(BUILT_GIRSOURCES:.gir=.typelib)
+
+%.typelib: %.gir $(INTROSPECTION_COMPILER)
+	LD_LIBRARY_PATH=.libs$${LD_LIBRARY_PATH:+:$$LD_LIBRARY_PATH} \
+	$(INTROSPECTION_COMPILER) \
+		--includedir=$(srcdir) \
+		$(INTROSPECTION_COMPILER_OPTS) $< -o $(@F)
+
+CLEANFILES += $(BUILT_GIRSOURCES) $(typelibs_DATA)
+endif
