[build] Refactor gobject-instrospection autoconf-fu
Following the documentation in
http://live.gnome.org/GObjectIntrospection/AutotoolsIntegration

--- a/configure.ac
+++ b/configure.ac
@@ -120,18 +120,10 @@ AM_CONDITIONAL(HAVE_VALA, test "x$with_vala" = "xyes")
 GTK_DOC_CHECK(1.9)
 
 # ----------------------------------------------------------
-# INTROSPECTION
+# GOBJECT-INTROSPECTION
 # ----------------------------------------------------------
-GOBJECT_INTROSPECTION_CHECK([0.6.4])
-if test "x$found_introspection" = "xyes"; then
-   GRL_GIR_NAMESPACE="prj_gir_name"
-   AC_SUBST(GRL_GIR_NAMESPACE)
-   AC_DEFINE_UNQUOTED(GRL_GIR_NAMESPACE, "$GRL_GIR_NAME", [GIR package namespace])
 
-   GRL_GIR_API_NAME="${GRL_GIR_NAMESPACE}-${GRL_MAJORMINOR}"
-   AC_SUBST(GRL_GIR_API_NAME)
-   AC_DEFINE_UNQUOTED(GRL_GIR_API_NAME, "$GRL_GIR_API_NAME", [GIR API name])
-fi
+GOBJECT_INTROSPECTION_CHECK([0.6.7])
 
 # ----------------------------------------------------------
 # GETTEXT
