[build] Avoid autotools abuse
There is no need to build an unshared library. It also makes the compilation
slower.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,8 +5,6 @@
 #
 # Copyright (C) 2010 Igalia S.L. All rights reserved.
 
-SUBDIRS = data
-
 lib_LTLIBRARIES = lib@GRL_NAME@.la
 
 lib@GRL_NAME@_la_CFLAGS =	\
@@ -15,8 +13,7 @@ lib@GRL_NAME@_la_CFLAGS =	\
 	-I$(srcdir)/data
 
 lib@GRL_NAME@_la_LIBADD =	\
-	$(DEPS_LIBS)		\
-	$(builddir)/data/libdata.la
+	$(DEPS_LIBS)
 
 lib@GRL_NAME@_la_SOURCES =					\
 	grl-media-plugin.c grl-media-plugin-priv.h		\
@@ -25,6 +22,17 @@ lib@GRL_NAME@_la_SOURCES =					\
 	grl-metadata-source.c grl-metadata-source-priv.h	\
 	grl-media-source.c					\
 	grl-log.c
+
+data_c_sources =		\
+	data/grl-data.c		\
+	data/grl-media.c	\
+	data/grl-media-audio.c	\
+	data/grl-media-video.c	\
+        data/grl-media-image.c	\
+	data/grl-media-box.c	\
+	data/grl-config.c
+
+lib@GRL_NAME@_la_SOURCES += $(data_c_sources)
 
 lib@GRL_NAME@incdir =	\
 	$(includedir)/@GRL_NAME@
@@ -38,6 +46,17 @@ lib@GRL_NAME@inc_HEADERS =	\
 	grl-metadata-source.h	\
 	grl-media-source.h	\
 	grl-log.h
+
+data_h_headers =		\
+	data/grl-data.h		\
+	data/grl-media.h	\
+	data/grl-media-box.h	\
+	data/grl-media-audio.h	\
+	data/grl-media-video.h	\
+	data/grl-media-image.h	\
+	data/grl-config.h
+
+lib@GRL_NAME@inc_HEADERS += $(data_h_headers)
 
 noinst_HEADERS =		\
 	grl-media-plugin-priv.h	\
@@ -58,24 +77,7 @@ INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir) --includedir=$(srcdir)/data
 # introspection support
 if HAVE_INTROSPECTION
 grilo_all_c_sources = $(lib@GRL_NAME@_la_SOURCES)
-grilo_all_c_sources +=		\
-	data/grl-data.c		\
-	data/grl-media.c	\
-	data/grl-media-audio.c	\
-	data/grl-media-video.c	\
-        data/grl-media-image.c	\
-	data/grl-media-box.c	\
-	data/grl-config.c
-
 grilo_all_headers = $(lib@GRL_NAME@inc_HEADERS)
-grilo_all_headers +=		\
-	data/grl-data.h		\
-	data/grl-media.h	\
-	data/grl-media-box.h	\
-	data/grl-media-audio.h	\
-	data/grl-media-video.h	\
-	data/grl-media-image.h	\
-	data/grl-config.h
 
 introspection_sources = \
 	$(grilo_all_headers)	\
