--- a/debian/rules
+++ b/debian/rules
@@ -10,5 +10,6 @@ DEB_CONFIGURE_SCRIPT := ./autogen.sh
 
 DEB_CONFIGURE_EXTRA_FLAGS :=	\
 	--enable-vala		\
-	--enable-gtk-doc
+	--enable-gtk-doc	\
+	--enable-introspection
 
