[tests] Initial addition of test suite boilerplate

--- a/configure.ac
+++ b/configure.ac
@@ -171,6 +171,7 @@ AC_CONFIG_FILES([
   grilo-0.1-uninstalled.pc
   grilo-0.1.pc
   src/Makefile
+  src/tests/Makefile
   tools/Makefile
   tools/grilo-test-ui/Makefile
   tools/vala/Makefile
