configure.ac: use tmpl free gtk-doc build if possible
The tmpl file mechanism is deprecated and only needed in legacy projects.

--- a/configure.ac
+++ b/configure.ac
@@ -117,7 +117,7 @@ AM_CONDITIONAL(HAVE_VALA, test "x$with_vala" = "xyes")
 # GTK-DOC
 # ----------------------------------------------------------
 
-GTK_DOC_CHECK(1.9)
+GTK_DOC_CHECK([1.10],[--flavour no-tmpl])
 
 # ----------------------------------------------------------
 # GOBJECT-INTROSPECTION
