--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@ m4_define([prj_gir_name], [Grilo])
 
 AC_INIT([prj_name], [prj_version])
 
-AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
+AM_INIT_AUTOMAKE([foreign])
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([src])
@@ -27,6 +27,8 @@ AM_PROG_CC_C_O
 AC_HEADER_STDC
 
 AM_MAINTAINER_MODE
+
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 CFLAGS="$CFLAGS -Wall -Werror -Wmissing-prototypes -Wmissing-declarations -std=c99"
 
