Make sure only grilo.h can be included
Add some definitions so if client includes other files than grilo.h an error
will be raised at building time.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,8 @@ lib_LTLIBRARIES = lib@GRL_NAME@.la
 lib@GRL_NAME@_la_CFLAGS =	\
 	$(DEPS_CFLAGS)		\
 	-I$(srcdir)		\
-	-I$(srcdir)/data
+	-I$(srcdir)/data	\
+	-DGRILO_COMPILATION
 
 lib@GRL_NAME@_la_LIBADD =	\
 	$(DEPS_LIBS)
