--- a/debian/libgrilo-0.1-dev.install.in
+++ b/debian/libgrilo-0.1-dev.install.in
@@ -1,3 +1,3 @@
 debian/tmp/usr/include/@GRL_NAME@/*
-debian/tmp/usr/lib/*.{a,la,so}
+debian/tmp/opt/usr/lib/*.{a,la,so}
 debian/tmp/usr/lib/pkgconfig/*
