--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,12 +83,12 @@ introspection_sources = \
 	$(lib@GRL_NAME@inc_HEADERS)	\
 	$(lib@GRL_NAME@_la_SOURCES)
 
-Grilo-@GRL_MAJORMINOR@.gir: lib@GRL_NAME@.la
-Grilo_0_1_gir_INCLUDES = GObject-2.0
-Grilo_0_1_gir_CFLAGS = $(lib@GRL_NAME@_la_CFLAGS)
-Grilo_0_1_gir_LIBS = lib@GRL_NAME@.la
-Grilo_0_1_gir_FILES = $(addprefix $(srcdir)/,$(introspection_sources))
-INTROSPECTION_GIRS += Grilo-@GRL_MAJORMINOR@.gir
+Grl-@GRL_MAJORMINOR@.gir: lib@GRL_NAME@.la
+Grl_0_1_gir_INCLUDES = GObject-2.0
+Grl_0_1_gir_CFLAGS = $(lib@GRL_NAME@_la_CFLAGS)
+Grl_0_1_gir_LIBS = lib@GRL_NAME@.la
+Grl_0_1_gir_FILES = $(addprefix $(srcdir)/,$(introspection_sources))
+INTROSPECTION_GIRS += Grl-@GRL_MAJORMINOR@.gir
 
 girdir = $(datadir)/gir-1.0
 dist_gir_DATA = $(INTROSPECTION_GIRS)
