--- a/Makefile.am
+++ b/Makefile.am
@@ -35,7 +35,7 @@ MAINTAINERCLEANFILES = \
 
 DISTCLEANFILES = $(MAINTAINERCLEANFILES)
 
-EXTRA_DIST = ./m4/introspection.m4
+EXTRA_DIST = ./m4/introspection.m4 ./m4/silent.m4
 
 DISTCHECK_CONFIGURE_FLAGS=--enable-gtk-doc
 
