--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: grilo-0.1
 Section: libs
 Priority: extra
 Maintainer: Juan A. Suarez Romero <jasuarez@igalia.com>
-Build-Depends: cdbs, debhelper (>= 5), gnome-common
+Build-Depends: cdbs, debhelper (>= 5), gnome-common, libglib2.0-dev
 Standards-Version: 3.7.2
 Homepage: http://gitorious.org/grilo
 
