[core] Added grl_multiple_search API.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,6 +24,7 @@ lib@GRL_NAME@_la_SOURCES =					\
 	grl-metadata-key.c grl-metadata-key-priv.h		\
 	grl-metadata-source.c grl-metadata-source-priv.h	\
 	grl-media-source.c grl-media-source-priv.h		\
+	grl-multiple.c						\
 	grl-log.c						\
 	grilo.c
 
@@ -49,7 +50,8 @@ lib@GRL_NAME@inc_HEADERS =	\
 	grl-metadata-key.h	\
 	grl-metadata-source.h	\
 	grl-media-source.h	\
-	grl-log.h
+	grl-log.h 		\
+	grl-multiple.h
 
 data_h_headers =		\
 	data/grl-data.h		\
