--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,7 +23,7 @@ lib@GRL_NAME@_la_SOURCES =					\
 	grl-plugin-registry.c					\
 	grl-metadata-key.c grl-metadata-key-priv.h		\
 	grl-metadata-source.c grl-metadata-source-priv.h	\
-	grl-media-source.c grl-media-source-priv.h		\
+	grl-media-source.c					\
 	grl-multiple.c						\
 	grl-log.c						\
 	grilo.c
@@ -67,7 +67,6 @@ lib@GRL_NAME@inc_HEADERS += $(data_h_headers)
 noinst_HEADERS =			\
 	grl-media-plugin-priv.h		\
 	grl-metadata-source-priv.h	\
-	grl-media-source-priv.h		\
 	grl-metadata-key-priv.h
 
 MAINTAINERCLEANFILES =	\
