Add grl_init() function
It initializes all stuff required in Grilo.

More specifically:

  - It registers default metadata keys in the registry.
  - It registers grilo media types in glib type-system.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,7 +24,7 @@ lib@GRL_NAME@_la_SOURCES =					\
 	grl-metadata-key.c grl-metadata-key-priv.h		\
 	grl-metadata-source.c grl-metadata-source-priv.h	\
 	grl-media-source.c					\
-	grl-log.c
+	grl-log.c grilo.c
 
 data_c_sources =		\
 	data/grl-data.c		\
