Add utility for services needing page_size + page_number
Grilo relies in offset + count to make pagination.

But there are services like Jamendo that needs the page_number and size of
page.

For these cases, a new utility function helps user to compute page_number and
offset inside the page where she needs to start looking for data. Also it
returns an "optimal" value for page size. This optimal value is the minimum
page size needed to retrieve the data in just one query to backend.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,7 +23,7 @@ lib@GRL_NAME@_la_SOURCES =					\
 	grl-plugin-registry.c					\
 	grl-metadata-key.c grl-metadata-key-priv.h		\
 	grl-metadata-source.c grl-metadata-source-priv.h	\
-	grl-media-source.c					\
+	grl-media-source.c grl-util.c				\
 	grl-multiple.c						\
 	grl-log.c						\
 	grilo.c
@@ -51,7 +51,8 @@ lib@GRL_NAME@inc_HEADERS =	\
 	grl-metadata-source.h	\
 	grl-media-source.h	\
 	grl-log.h 		\
-	grl-multiple.h
+	grl-multiple.h		\
+	grl-util.h
 
 data_h_headers =		\
 	data/grl-data.h		\
