grl-inspect: Add grl-inspect utility
This utility is very similar to gst-inspect: it allows to inspect available
sources and their features.

--- a/configure.ac
+++ b/configure.ac
@@ -187,6 +187,7 @@ AC_CONFIG_FILES([
   src/tests/Makefile
   tools/Makefile
   tools/grilo-test-ui/Makefile
+  tools/grilo-inspect/Makefile
   tools/vala/Makefile
   bindings/Makefile
   bindings/vala/Makefile
