Remove ABI to uninstalled pc file
Specify the ABI on uninstalled files makes no sense, because the
it only has value for the external consumers.

Signed-off-by: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

--- a/configure.ac
+++ b/configure.ac
@@ -197,7 +197,7 @@ AC_SUBST([builddir])
 
 AC_CONFIG_FILES([
   Makefile
-  grilo-0.1-uninstalled.pc
+  grilo-uninstalled.pc
   grilo-0.1.pc
   src/Makefile
   src/tests/Makefile
