vala: add namespace template
This new file is going to be used in the new vala vapi generation.

No functional changes yet.

Signed-off-by: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

--- a/configure.ac
+++ b/configure.ac
@@ -207,6 +207,7 @@ AC_CONFIG_FILES([
   tools/vala/Makefile
   bindings/Makefile
   bindings/vala/Makefile
+  bindings/vala/grilo-uninstalled.namespace
   doc/Makefile
   doc/reference/Makefile
 ])
