--- a/debian/control.in
+++ b/debian/control.in
@@ -3,7 +3,8 @@ Section: libs
 Priority: extra
 Maintainer: Juan A. Suarez Romero <jasuarez@igalia.com>
 Build-Depends: cdbs, debhelper (>= 5), gnome-common, libvala-dev (>= 0.7.2)
- valac (>= 0.7.2), gtk-doc-tools, libgirepository1.0-dev, gobject-introspection
+ valac (>= 0.7.2), gtk-doc-tools, libgirepository1.0-dev,
+ gobject-introspection, libxml2-dev
 Standards-Version: 3.7.2
 Homepage: http://gitorious.org/grilo
 
