build: remove unused variable
No functional changes.

Signed-off-by: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -65,6 +65,6 @@ endif
 
 all: $(vapifiles)
 
-EXTRA_DIST = $(depsfiles) $(filesfiles_src) $(nsfiles_src) $(metadatafiles) $(vapifiles)
+EXTRA_DIST = $(filesfiles_src) $(nsfiles_src) $(metadatafiles) $(vapifiles)
 CLEANFILES = $(gifiles)
 DISTCLEANFILES = $(vapifiles) $(filesfiles) $(nsfiles)
