gitignore: Put common ignores in the root .gitignore
Putting common ignores in the root file makes some gitignore files
unecessary, reducing the maintainance of the .gitignore files.

https://bugzilla.gnome.org/show_bug.cgi?id=627863

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 Makefile
 Makefile.in
+TAGS
 aclocal.m4
 autom4te.cache
 compile
@@ -11,6 +12,15 @@ libtool
 ltmain.sh
 missing
 m4
+stamp-*
 *.make
+*.o
+*.la
+*.lo
+*.gir
+*.typelib
 *.pc
+*.sw?
 *~
+.libs
+.deps
