bindings: add gmodule as link dependency
As the commit b23869 modifies the ABI exposing a GModule instance, so we need
to communicate the new linkage dependency to the bindings.

Signed-off-by: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -43,6 +43,7 @@ nsfiles_src = $(foreach target,$(targets_u),$(target).namespace.in)
 nsfiles = $(foreach target,$(targets_u),$(target).namespace)
 
 # "source" files for vapigen
+depsfiles = $(foreach target,$(targets),$(target).deps)
 gifiles = $(foreach target,$(targets),$(target).gi)
 metadatafiles = $(foreach target,$(targets),$(target).metadata)
 
@@ -65,6 +66,6 @@ endif
 
 all: $(vapifiles)
 
-EXTRA_DIST = $(filesfiles_src) $(nsfiles_src) $(metadatafiles) $(vapifiles)
+EXTRA_DIST = $(depsfiles) $(filesfiles_src) $(nsfiles_src) $(metadatafiles) $(vapifiles)
 CLEANFILES = $(gifiles)
 DISTCLEANFILES = $(vapifiles) $(filesfiles) $(nsfiles)
