--- a/grilo-0.1.pc.in
+++ b/grilo-0.1.pc.in
@@ -3,12 +3,15 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@/@GRL_NAME@
 plugindir=@GRL_PLUGINS_DIR@
+datarootdir=${prefix}/share
+datadir=${datarootdir}
+girdir=${datadir}/gir-1.0
+typelibdir=${libdir}/girepository-1.0
 
 Name: Grilo Framework
 Description: Grilo Framework for multimedia developers
 Version: @VERSION@
 Libs: -L${libdir} -l@GRL_NAME@
 Cflags: -I${includedir}
-Requires: gobject-2.0
+Requires: glib-2.0 gobject-2.0 gmodule-2.0 gio-2.0 libxml-2.0
 Requires.Private:
-
