--- a/grilo-uninstalled.pc.in
+++ b/grilo-uninstalled.pc.in
@@ -1,14 +1,17 @@
+# the standard variables don't make sense for an uninstalled copy
 prefix=
 exec_prefix=
-libdir=${pcfiledir}/src
-includedir=${pcfiledir}/src
-plugindir=${libdir}/@GRL_NAME@
+libdir=
+includedir=@abs_top_builddir@/src
+plugindir=@abs_top_builddir@
+girdir=@abs_top_builddir@/src
+typelibdir=@abs_top_builddir@/src
 
 Name: Grilo Framework
 Description: Grilo Framework for multimedia developers, Not Installed
 Version: @VERSION@
-Libs: ${libdir}/lib@GRL_NAME@.la
-Cflags: -I${includedir} -I${includedir}/data
-Requires: gobject-2.0
+Libs: @abs_top_builddir@/src/lib@GRL_NAME@.la
+Cflags: -I@abs_top_srcdir@/src -I@abs_top_srcdir@/src/data
+Requires: glib-2.0 gobject-2.0 gmodule-2.0 gio-2.0 libxml-2.0
 Requires.Private:
 
