grl-net: new header file
Signed-off-by: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

--- a/libs/net/Makefile.am
+++ b/libs/net/Makefile.am
@@ -31,7 +31,8 @@ libgrlnet_@GRL_MAJORMINOR@includedir =	\
 	$(includedir)/@GRL_NAME@/net
 
 libgrlnet_@GRL_MAJORMINOR@include_HEADERS =	\
-	grl-net-wc.h
+	grl-net-wc.h				\
+	grl-net.h
 
 wc_test_SOURCES = 	\
 	wc-test.c
