core: Moved tests infrastructure to /tests
As discussed in the mailing list [1, 2, 3], this patch moves
the test infrastructure from src/tests/ to tests/

In these discussions there was an agreement about having a python/, js/
etc directory for each language, under tests/. The test/ directory location
wasn't agreed, but Edu Lima's reply on [4] seemed quite convincing, and
nobody opposed to it.

[1] http://mail.gnome.org/archives/grilo-list/2010-May/msg00041.html
[2] http://mail.gnome.org/archives/grilo-list/2010-August/msg00074.html
[3] http://mail.gnome.org/archives/grilo-list/2010-August/msg00107.html
[4] http://mail.gnome.org/archives/grilo-list/2010-August/msg00106.html

--- a/configure.ac
+++ b/configure.ac
@@ -221,7 +221,7 @@ AC_CONFIG_FILES([
   grilo-uninstalled.pc
   grilo-0.1.pc
   src/Makefile
-  src/tests/Makefile
+  tests/Makefile
   tools/Makefile
   tools/grilo-test-ui/Makefile
   tools/grilo-inspect/Makefile
