core: Updated infrastructure to support python tests
    * Update configure.ac to generate a 'util' Python class
    * Added a test runner to launch Python unit tests
    * Added python/ to tests' SUBDIRS
    * Updated test's Makefile.am to avoid launching Python tests twice
      when 'make check' is invoked

--- a/configure.ac
+++ b/configure.ac
@@ -222,6 +222,8 @@ AC_CONFIG_FILES([
   grilo-0.1.pc
   src/Makefile
   tests/Makefile
+  tests/python/Makefile
+  tests/python/util.py
   tools/Makefile
   tools/grilo-test-ui/Makefile
   tools/grilo-inspect/Makefile
