tests: Tested the PluginRegistry class using GI
This patch tests the class' methods from Python using
GObject Introspection, checking functionality and bindings
at the same time.

--- a/tests/python/Makefile.am
+++ b/tests/python/Makefile.am
@@ -10,7 +10,8 @@ endif
 
 if HAVE_INTROSPECTION
 EXTRA_DIST = \
-	testrunner.py
+	testrunner.py \
+	test_registry.py
 endif
 
 .PHONY: test test-report perf-report full-report
