tests: Tested the PluginMedia class using GI

--- a/tests/python/Makefile.am
+++ b/tests/python/Makefile.am
@@ -11,7 +11,8 @@ endif
 if HAVE_INTROSPECTION
 EXTRA_DIST = \
 	testrunner.py \
-	test_registry.py
+	test_registry.py \
+	test_plugin.py
 endif
 
 .PHONY: test test-report perf-report full-report
